--- a/cpio-web/templates/package.json
+++ b/cpio-web/templates/package.json
@@ -1,5 +1,7 @@
 {
+  "name": "cpio-frontend",
   "devDependencies": {
+    "bower": "^1.7.0",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-bower": "0.0.11",
