--- a/cpio-web/templates/package.json
+++ b/cpio-web/templates/package.json
@@ -6,10 +6,13 @@
     "gulp-autoprefixer": "^3.1.0",
     "gulp-bower": "0.0.11",
     "gulp-concat": "^2.6.0",
+    "gulp-jshint": "^2.0.0",
     "gulp-minify-css": "^1.2.2",
     "gulp-notify": "^2.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-ruby-sass": "^0.7.1",
-    "gulp-uglify": "^1.5.1"
+    "gulp-uglify": "^1.5.1",
+    "jshint": "^2.8.0",
+    "rimraf": "^2.4.4"
   }
 }
