--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,7 @@ eagle.epf
 
 *.lck
 
+
 ### OSX ###
 .DS_Store
 .AppleDouble
@@ -48,7 +49,6 @@ eagle.epf
 
 # Icon must end with two \r
 Icon
-
 
 # Thumbnails
 ._*
@@ -67,3 +67,7 @@ Icon
 Network Trash Folder
 Temporary Items
 .apdisk
+
+
+### Additional Files ###
+~*
